Add basic routers

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    test test
+    <link rel="stylesheet" type="text/css" href="stylesheets/index.css">
+    <title>DNASSSYSTEM</title>
 </head>
+
 <body>
-    
+    <h1 id="title">DNASSSYSTEM</h1>
+    <form action="/" method="post">
+        <input type="submit" name="apply_identity" value="Apply Identity">
+    </form>
+    <form action="/" method="post">
+        <input type="submit" name="login" value="Login">
+    </form>
 </body>
+
 </html>
