--- a/app/public/stylesheets/index.css
+++ b/app/public/stylesheets/index.css
@@ -1,8 +1,32 @@
 body {
     background-color: #F0F0F0;
+    margin: 0;
 }
 
-#title {
-    color: #004B97;
+.navbar {
+    background-color: #5B00AE;
+    overflow: hidden;
+}
+
+.navbar-item {
+    display: block;
+    background-color: #5B00AE;
+    color: #F0F0F0;
+    padding: 14px 16px;
     text-align: center;
+    text-decoration: none;
+    width: 15%;
+}
+
+.navbar-item-left {
+    float: left;
+}
+
+.navbar-item-right {
+    float: right;
+}
+
+.navbar-item:hover {
+    background-color: #D3A4FF;
+    color: #272727;
 }
