--- a/app/views/index.html
+++ b/app/views/index.html
@@ -9,13 +9,18 @@
 </head>
 
 <body>
-    <h1 id="title">DNASSSYSTEM</h1>
-    <form action="/" method="post">
+    <!-- <h1 id="title">DNASSSYSTEM</h1> -->
+    <!-- <form action="/" method="post">
         <input type="submit" name="apply_identity" value="Apply Identity">
     </form>
     <form action="/" method="post">
         <input type="submit" name="login" value="Login">
-    </form>
+    </form> -->
+    <div class="navbar">
+        <a class="navbar-item navbar-item-left" href="/">DNASSSYSTEM</a>
+        <a class="navbar-item navbar-item-right" href="/login">Login</a>
+        <a class="navbar-item navbar-item-right" href="/apply_identity">Apply Identity</a>
+    </div>
 </body>
 
 </html>
