--- a/app/views/apply_identity.jade
+++ b/app/views/apply_identity.jade
@@ -18,4 +18,11 @@ head
     input(type='text' name='id' placeholder='id number' required='')
     input#address(type='text' name='address' placeholder='address' required='' readonly='')
     button(type='button' onclick='connect();') connect to metamask
+    div
+      input(type='radio' name='role' value='1')
+      label(for='role') patient
+      input(type='radio' name='role' value='2')
+      label(for='role') hospital
+      input(type='radio' name='role' value='3')
+      label(for='role') research center
     input(type='submit' name='apply' value='apply')
