Modify identity contracts, add manage page

--- a/app/views/apply_identity.jade
+++ b/app/views/apply_identity.jade
@@ -9,7 +9,7 @@ head
   script(src='javascripts/apply_identity.js')
 .navbar
   a.navbar-item.navbar-item-left(href='/') DNASSSYSTEM
-  a.navbar-item.navbar-item-right(href='/login') Login
+  a.navbar-item.navbar-item-right(href='/manage_identity') Manage Identity
   a.navbar-item.navbar-item-right(href='/apply_identity') Apply Identity
 .form
   p Apply a New Identity
