--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -9,5 +9,5 @@ html(lang='en')
   body
     .navbar
       a.navbar-item.navbar-item-left(href='/') DNASSSYSTEM
-      a.navbar-item.navbar-item-right(href='/login') Login
+      a.navbar-item.navbar-item-right(href='/manage_identity') Manage Identity
       a.navbar-item.navbar-item-right(href='/apply_identity') Apply Identity
