Add register page

--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -11,3 +11,4 @@ html(lang='en')
       a.navbar-item.navbar-item-left(href='/') DNASSSYSTEM
       a.navbar-item.navbar-item-right(href='/manage_identity') Manage Identity
       a.navbar-item.navbar-item-right(href='/apply_identity') Apply Identity
+      a.navbar-item.navbar-item-right(href='/register') Register
