--- a/app/views/register.jade
+++ b/app/views/register.jade
@@ -7,16 +7,17 @@ head
   link(rel='stylesheet' type='text/css' href='stylesheets/form.css')
   title DNASSSYSTEM
   script(src='https://cdn.jsdelivr.net/npm/web3@1.5.3/dist/web3.min.js')
-  script(src='javascripts/apply_identity.js')
+  script(src='javascripts/IdentityManager.abi.js')
+  script(src='javascripts/register.js')
 .navbar
   a.navbar-item.navbar-item-left(href='/') DNASSSYSTEM
   a.navbar-item.navbar-item-right(href='/manage_identity') Manage Identity
   a.navbar-item.navbar-item-right(href='/apply_identity') Apply Identity
   a.navbar-item.navbar-item-right(href='/register') Register
 .form
-  p Apply a New Identity
-  form(action='/apply_identity' method='post')
-    input(type='text' name='id' placeholder='id number' required='')
+  p Register
+  form(action='/register' method='post')
+    input(type='text' name='priavte_key' placeholder='private key' required='')
     input#address(type='text' name='address' placeholder='address' required='' readonly='')
     button(type='button' onclick='connect();') connect to metamask
     div
@@ -26,4 +27,5 @@ head
       label(for='role') hospital
       input(type='radio' name='role' value='3')
       label(for='role') research center
-    input(type='submit' name='apply' value='apply')
+    button(type='button' onclick='check();') verify identity
+    input(type='submit' name='register' value='register' onsubmit='alert("aaa);')
