--- a/app/views/apply_identity.jade
+++ b/app/views/apply_identity.jade
@@ -7,6 +7,7 @@ head
   link(rel='stylesheet' type='text/css' href='stylesheets/form.css')
   title DNASSSYSTEM
   script(src='https://cdn.jsdelivr.net/npm/web3@1.5.3/dist/web3.min.js')
+  script(src='javascripts/bundle.js')
   script(src='javascripts/apply_identity.js')
 .navbar
   a.navbar-item.navbar-item-left(href='/') DNASSSYSTEM
