--- a/app/views/did_register.jade
+++ b/app/views/did_register.jade
@@ -23,4 +23,4 @@ head
     input#id(type='text' name='id' placeholder='id number' required='')
     input#address(type='text' name='address' placeholder='address' required='' readonly='')
     button(type='button' onclick='getMetamaskAccount();') get metamask account
-    input(type='submit' name='apply' value='apply' onclick='return checkFieldValues();')
+    input(type='submit' name='register' value='register' onclick='return checkFieldValues();')
