--- a/app/public/stylesheets/body.css
+++ b/app/public/stylesheets/body.css
@@ -1,4 +1,10 @@
 body {
     background-color: #272727;
+    text-align: center;
     margin: 0;
+}
+
+body h3 {
+    color: #F0F0F0;
+    font-weight: bold;
 }
