--- a/app/public/stylesheets/form.css
+++ b/app/public/stylesheets/form.css
@@ -16,7 +16,8 @@
 }
 
 .form input[type="text"],
-.form input[type="password"] {
+.form input[type="password"],
+.form input[type="file"] {
     width: 80%;
     padding: 10px;
     margin: 10px 0;
