--- a/app/views/did_manage.jade
+++ b/app/views/did_manage.jade
@@ -11,6 +11,7 @@ head
   script(src='../javascripts/did_manage.js')
   script(src='../javascripts/IdentityManager.abi.js')
   script(src='../javascripts/Identity.abi.js')
+  script(src='../javascripts/did_config.js')
 body
   .navbar
     a.navbar-item.navbar-item-left(href='/did/index') DID SYSTEM
