--- a/app/views/app_register.jade
+++ b/app/views/app_register.jade
@@ -7,7 +7,11 @@ head
   link(rel='stylesheet' type='text/css' href='../stylesheets/form.css')
   title DID SYSTEM
   script(src='../javascripts/web3.bundle.js')
+  script(src='../javascripts/eth_sig_util.bundle.js')
   script(src='../javascripts/app_register.js')
+  script(src='../javascripts/IdentityManager.abi.js')
+  script(src='../javascripts/Identity.abi.js')
+  script(src='../javascripts/did_config.js')
 body
   .navbar
     a.navbar-item.navbar-item-left(href='/did/index') DNA SYSTEM
@@ -17,12 +21,16 @@ body
     p Register
     form(action='/app/register' method='post')
       input#address(type='text' name='address' placeholder='address' hidden readonly='')
-      input#message(type='text' name='message' placeholder='message' readonly='')
+      input#message(type='text' name='message' placeholder='message' value='[DNASSSYSTEM] Sign this message to request creating account.' readonly='')
       input#signature(type='text' name='signature' placeholder='signature' required readonly='')
-      button(type='button' onclick='getMetamaskAccount(); signWithMetamask();') sign message with metamask account
+      button(type='button' onclick='getMetamaskAccount(); signWithMetamask();') sign 
+      br
+      br
+      input#app_encrypted_csr(type='text' name='app_encrypted_csr' placeholder='app_encrypted_csr' readonly='')
+      button(type='button' onclick='provideCsr();') provide
       br
       br
       input(type='submit' name='register' value='register' onclick='return true;')
-  .form
-    form(action='/app/test' method='post')
-      input(type='submit' name='register' value='register' onclick='return true;')
+  //- .form
+  //-   form(action='/app/test' method='post')
+  //-     input(type='submit' name='register' value='register' onclick='return true;')
