Decode openssl csr

--- a/app/views/app_register.jade
+++ b/app/views/app_register.jade
@@ -31,6 +31,6 @@ body
       br
       br
       input(type='submit' name='register' value='register' onclick='return true;')
-  //- .form
-  //-   form(action='/app/test' method='post')
-  //-     input(type='submit' name='register' value='register' onclick='return true;')
+  .form
+    form(action='/app/test' method='post')
+      input(type='submit' name='register' value='register' onclick='return true;')
