--- a/app/views/did_manage.jade
+++ b/app/views/did_manage.jade
@@ -1,41 +1,39 @@
 doctype html
-head
-  meta(charset='UTF-8')
-  meta(name='viewport' content='width=device-width, initial-scale=1.0')
-  link(rel='stylesheet' type='text/css' href='../stylesheets/body.css')
-  link(rel='stylesheet' type='text/css' href='../stylesheets/navbar.css')
-  link(rel='stylesheet' type='text/css' href='../stylesheets/form.css')
-  title DID SYSTEM
-  script(src='../javascripts/web3.bundle.js')
-  script(src='../javascripts/eth_sig_util.bundle.js')
-  script(src='../javascripts/did_manage.js')
-  script(src='../javascripts/IdentityManager.abi.js')
-  script(src='../javascripts/Identity.abi.js')
-  script(src='../javascripts/did_config.js')
-body
-  .navbar
-    a.navbar-item.navbar-item-left(href='/did/index') DID SYSTEM
-    a.navbar-item.navbar-item-right(href='/did/manage') Manage Identity
-    a.navbar-item.navbar-item-right(href='/did/register') Register Identity
-  .form
-    p Identity Infomations
-    form(action='/did/manage' method='post')
-      input#identity-info-role(type='text' name='role' placeholder='role' required='' readonly='')
-      input#identity-info-id(type='text' name='id' placeholder='id number' required='' readonly='')
-      input#identity-info-address(type='text' name='address' placeholder='address' required='' readonly='')
-      input(type='submit' name='show' value='show' onclick='showIdentityInformations(); return false;')
-  .form
-    p Upload Encrypted Data
-    form(action='/did/manage' method='post')
-      input#upload-encrypted-data-name(type='text' name='name' placeholder='name' required='')
-      input#upload-encrypted-data-data(type='file' name='data' placeholder='data' required='')
-      input(type='submit' name='upload' value='encrypt & upload' onclick='uploadEncryptedData(); return false;')
-  .form
-    p Download Encrypted Data
-    form(action='/did/manage' method='post')
-      input#download-encrypted-data-name(type='text' name='name' placeholder='name' required='')
-      input#download-encrypted-data-data(type='text' name='data' placeholder='data' required='')
-      input(type='submit' name='download' value='download & decrypt' onclick='downloadEncryptedData(); return false;')
-  br
-  br
-  br 
+html(lang='en')
+    head
+        meta(charset='UTF-8')
+        meta(name='viewport' content='width=device-width, initial-scale=1.0')
+        link(rel='stylesheet' type='text/css' href='../stylesheets/body.css')
+        link(rel='stylesheet' type='text/css' href='../stylesheets/navbar.css')
+        link(rel='stylesheet' type='text/css' href='../stylesheets/form.css')
+        title DID
+    body
+        div.navbar
+            a.navbar-item.navbar-item-left(href='/did/index') DID 
+            a.navbar-item.navbar-item-right(href='/did/manage') Manage Identity
+            a.navbar-item.navbar-item-right(href='/did/register') Register Identity
+        form.form
+            h3.form-title Identity Infos
+            input.form-input#identity-info-role(type='text' name='role' placeholder='role' required='' readonly='')
+            input.form-input#identity-info-id(type='text' name='id' placeholder='id number' required='' readonly='')
+            input.form-input#identity-info-address(type='text' name='address' placeholder='address' required='' readonly='')
+            input.form-button.form-button-color(type='submit' name='show' value='show' onclick='showIdentityInformations(); return false;')
+        form.form
+            h3.form-title Upload Data
+            input.form-input#upload-encrypted-data-name(type='text' name='name' placeholder='name' required='')
+            input.form-input#upload-encrypted-data-data(type='file' name='data' placeholder='data' required='')
+            input.form-button.form-button-color(type='submit' name='upload' value='encrypt & upload' onclick='uploadEncryptedData(); return false;')
+        form.form
+            h3.form-title Download Data
+            input.form-input#download-encrypted-data-name(type='text' name='name' placeholder='name' required='')
+            input.form-input#download-encrypted-data-data(type='text' name='data' placeholder='data' required='')
+            input.form-button.form-button-color(type='submit' name='download' value='download & decrypt' onclick='downloadEncryptedData(); return false;')
+        br
+        br
+        br 
+    script(src='../javascripts/web3.bundle.js')
+    script(src='../javascripts/eth_sig_util.bundle.js')
+    script(src='../javascripts/did_manage.js')
+    script(src='../javascripts/IdentityManager.abi.js')
+    script(src='../javascripts/Identity.abi.js')
+    script(src='../javascripts/did_config.js')
