--- a/app/views/did_register.jade
+++ b/app/views/did_register.jade
@@ -1,26 +1,30 @@
 doctype html
-head
-  meta(charset='UTF-8')
-  meta(name='viewport' content='width=device-width, initial-scale=1.0')
-  link(rel='stylesheet' type='text/css' href='../stylesheets/body.css')
-  link(rel='stylesheet' type='text/css' href='../stylesheets/navbar.css')
-  link(rel='stylesheet' type='text/css' href='../stylesheets/form.css')
-  title DID SYSTEM
-  script(src='../javascripts/web3.bundle.js')
-  script(src='../javascripts/did_register.js')
-.navbar
-  a.navbar-item.navbar-item-left(href='/did/index') DID SYSTEM
-  a.navbar-item.navbar-item-right(href='/did/manage') Manage Identity
-  a.navbar-item.navbar-item-right(href='/did/register') Register Identity
-.form
-  p Register a New Identity
-  form(action='/did/register' method='post')
-    select#role(name='role')
-      option(value='0') -- Please Select a Role --
-      option(value='1') Patient 
-      option(value='2') Hospital
-      option(value='3') Research Center
-    input#id(type='text' name='id' placeholder='id number' required='')
-    input#address(type='text' name='address' placeholder='address' required='' readonly='')
-    button(type='button' onclick='getMetamaskAccount();') get metamask account
-    input(type='submit' name='register' value='register' onclick='return checkFieldValues();')
+html(lang='en')
+    head
+        meta(charset='UTF-8')
+        meta(name='viewport' content='width=device-width, initial-scale=1.0')
+        link(rel='stylesheet' type='text/css' href='../stylesheets/body.css')
+        link(rel='stylesheet' type='text/css' href='../stylesheets/navbar.css')
+        link(rel='stylesheet' type='text/css' href='../stylesheets/form.css')
+        title DID
+    body
+        div.navbar
+            a.navbar-item.navbar-item-left(href='/did/index') DID
+            a.navbar-item.navbar-item-right(href='/did/manage') Manage Identity
+            a.navbar-item.navbar-item-right(href='/did/register') Register Identity
+        form.form(action='/did/register' method='post')
+            h3.form-title Register a New Identity
+            select.form-select#role(name='role')
+                option(value='0') -- Please Select a Role --
+                option(value='1') Patient 
+                option(value='2') Hospital
+                option(value='3') Research Center
+            input.form-input#id(type='text' name='id' placeholder='id number' required='')
+            input.form-input#address(type='text' name='address' placeholder='address' required='' readonly='')
+            button.form-button.form-metamask-button-color(type='button' onclick='getMetamaskAccount();') get metamask account
+            input.form-button.form-button-color(type='submit' name='register' value='register' onclick='return checkFieldValues();')
+        br
+        br
+        br
+    script(src='../javascripts/web3.bundle.js')
+    script(src='../javascripts/did_register.js')
