--- a/app/views/did_index.jade
+++ b/app/views/did_index.jade
@@ -1,20 +1,20 @@
 doctype html
 html(lang='en')
-  head
-    meta(charset='UTF-8')
-    meta(name='viewport' content='width=device-width, initial-scale=1.0')
-    link(rel='stylesheet' type='text/css' href='../stylesheets/body.css')
-    link(rel='stylesheet' type='text/css' href='../stylesheets/navbar.css')
-    link(rel='stylesheet' type='text/css' href='../stylesheets/did_index.css')
-    title DID SYSTEM
-  body
-    .navbar
-      a.navbar-item.navbar-item-left(href='/did') DID SYSTEM
-      a.navbar-item.navbar-item-right(href='/did/manage') Manage Identity
-      a.navbar-item.navbar-item-right(href='/did/register') Register Identity
-    br
-    br
-    .homepage-div
-      a.homepage-button(href='/did/register') Register Identity
-    .homepage-div
-      a.homepage-button(href='/did/manage') Manage Identity
+    head
+        meta(charset='UTF-8')
+        meta(name='viewport' content='width=device-width, initial-scale=1.0')
+        link(rel='stylesheet' type='text/css' href='../stylesheets/body.css')
+        link(rel='stylesheet' type='text/css' href='../stylesheets/navbar.css')
+        link(rel='stylesheet' type='text/css' href='../stylesheets/did_index.css')
+        title DID
+    body
+        div.navbar
+            a.navbar-item.navbar-item-left(href='/did') DID
+            a.navbar-item.navbar-item-right(href='/did/manage') Manage Identity
+            a.navbar-item.navbar-item-right(href='/did/register') Register Identity
+        br
+        br
+        div.homepage-div
+            a.homepage-button(href='/did/register') Register Identity
+        div.homepage-div
+            a.homepage-button(href='/did/manage') Manage Identity
