--- a/app/views/app_index.jade
+++ b/app/views/app_index.jade
@@ -9,7 +9,8 @@ html(lang='en')
     title DID SYSTEM
   body
     .navbar
-      a.navbar-item.navbar-item-left(href='/app') DNA SYSTEM
+      a.navbar-item.navbar-item-left(href='/app') PPDNASSP
+      a.navbar-item.navbar-item-right(href='/app/download') Download
       a.navbar-item.navbar-item-right(href='/app/manage') Manage
       a.navbar-item.navbar-item-right(href='/app/register') Register
     br
