--- a/app/views/app_manage.jade
+++ b/app/views/app_manage.jade
@@ -10,6 +10,7 @@ html(lang='en')
     body
         div.navbar
             a.navbar-item.navbar-item-left(href='/app/index') PPDNASSP
+            a.navbar-item.navbar-item-right(href='/app/download') Download
             a.navbar-item.navbar-item-right(href='/app/manage') Manage
             a.navbar-item.navbar-item-right(href='/app/register') Register
         form.form(action='/app/manage/update_permission' method='post')
