--- a/app/views/app_index.jade
+++ b/app/views/app_index.jade
@@ -15,7 +15,7 @@ html(lang='en')
       a.navbar-item.navbar-item-right(href='/app/register') Register
     br
     br
-    .homepage-div
-      a.homepage-button(href='/app/register') Register
-    .homepage-div
-      a.homepage-button(href='/app/manage') Manage
+    //- .homepage-div
+    //-   a.homepage-button(href='/app/register') Register
+    //- .homepage-div
+    //-   a.homepage-button(href='/app/manage') Manage
