--- a/app/views/did_index.jade
+++ b/app/views/did_index.jade
@@ -14,7 +14,7 @@ html(lang='en')
             a.navbar-item.navbar-item-right(href='/did/register') Register Identity
         br
         br
-        div.homepage-div
-            a.homepage-button(href='/did/register') Register Identity
-        div.homepage-div
-            a.homepage-button(href='/did/manage') Manage Identity
+        //- div.homepage-div
+        //-     a.homepage-button(href='/did/register') Register Identity
+        //- div.homepage-div
+        //-     a.homepage-button(href='/did/manage') Manage Identity
