--- a/app/views/did_register.jade
+++ b/app/views/did_register.jade
@@ -14,15 +14,14 @@ html(lang='en')
             a.navbar-item.navbar-item-right(href='/did/register') Register Identity
         form.form(action='/did/register' method='post')
             h3.form-title Register a New Identity
-            select.form-select#role(name='role')
-                option(value='0') -- Please Select a Role --
-                option(value='1') Patient 
-                option(value='2') Hospital
-                option(value='3') Research Center
-            input.form-input#id(type='text' name='id' placeholder='id number' required='')
+            select.form-select#type(name='type')
+                option(value='0') -- Please Select a Type --
+                option(value='1') Person 
+                option(value='2') organization
+            input.form-input#id(type='text' name='id' placeholder='id number / org number' required='')
             input.form-input#address(type='text' name='address' placeholder='address' required='' readonly='')
             button.form-button.form-metamask-button-color(type='button' onclick='getMetamaskAccount();') get metamask account
-            input.form-button.form-button-color(type='submit' name='register' value='register' onclick='return checkFieldValues();')
+            input.form-button.form-button-color(type='submit' name='register' value='register' onclick='return true;')
         br
         br
         br
