Did code refactoring

--- a/app/views/did_index.jade
+++ b/app/views/did_index.jade
@@ -10,11 +10,8 @@ html(lang='en')
     body
         div.navbar
             a.navbar-item.navbar-item-left(href='/did') DID
-            a.navbar-item.navbar-item-right(href='/did/manage') Manage Identity
-            a.navbar-item.navbar-item-right(href='/did/register') Register Identity
+            a.navbar-item.navbar-item-right(href='/did/manage') Manage
+            a.navbar-item.navbar-item-right(href='/did/register') Register
         br
         br
-        //- div.homepage-div
-        //-     a.homepage-button(href='/did/register') Register Identity
-        //- div.homepage-div
-        //-     a.homepage-button(href='/did/manage') Manage Identity
+        br
