--- a/app/views/app_index.jade
+++ b/app/views/app_index.jade
@@ -1,21 +1,18 @@
 doctype html
 html(lang='en')
-  head
-    meta(charset='UTF-8')
-    meta(name='viewport' content='width=device-width, initial-scale=1.0')
-    link(rel='stylesheet' type='text/css' href='../stylesheets/body.css')
-    link(rel='stylesheet' type='text/css' href='../stylesheets/navbar.css')
-    link(rel='stylesheet' type='text/css' href='../stylesheets/did_index.css')
-    title PPDNASSP
-  body
-    .navbar
-      a.navbar-item.navbar-item-left(href='/app') PPDNASSP
-      a.navbar-item.navbar-item-right(href='/app/download') Download
-      a.navbar-item.navbar-item-right(href='/app/manage') Manage
-      a.navbar-item.navbar-item-right(href='/app/register') Register
-    br
-    br
-    //- .homepage-div
-    //-   a.homepage-button(href='/app/register') Register
-    //- .homepage-div
-    //-   a.homepage-button(href='/app/manage') Manage
+    head
+        meta(charset='UTF-8')
+        meta(name='viewport' content='width=device-width, initial-scale=1.0')
+        link(rel='stylesheet' type='text/css' href='../stylesheets/body.css')
+        link(rel='stylesheet' type='text/css' href='../stylesheets/navbar.css')
+        title PPDNASSP
+    body
+        div.navbar
+            a.navbar-item.navbar-item-left(href='/app') PPDNASSP
+            a.navbar-item.navbar-item-right(href='/app/download') Download
+            a.navbar-item.navbar-item-right(href='/app/upload') Upload
+            a.navbar-item.navbar-item-right(href='/app/manage') Manage
+            a.navbar-item.navbar-item-right(href='/app/register') Register
+        br
+        br
+        br
